[package]
name = "vineyard"
version = "0.0.0"
edition = "2024"
authors = ["Arris Kathery <whotookelburg@hotmail.com>"]
description = "Vineyard is an extensive manager and assistant for running Windows apps with WINE!"
readme = "README.md"

[dependencies]
curl = "0.4.48"
#daemonize = "0.5.0"
toml = "0.9.2"
yaml-rust = "0.4.5"
zbus = "5.9.0"
